--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
-    "discord-api-types": "^0.37.120",
+    "discord-api-types": "^0.38.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@discordjs/voice": "^0.18.0",
+    "@discordjs/voice": "^1.0.0-dev.1746144804-75179fbf9",
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
     "moment-timezone": "^0.5.48",
     "mp3-duration": "^1.1.0",
-    "openai": "4.95.0",
+    "openai": "4.96.2",
     "play-dl": "^1.9.7",
     "rimraf": "^6.0.1",
     "scrape-youtube": "^2.4.0",
