Update README.md to enhance Discord bot setup instructions, add instructions for local MP3 playback and advanced environment variables, expand on configuration options including new features and settings, update localization files with French translations and additional keys, and modify source code to incorporate new environment variables, features, and localization options.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 # Discord Bot Name
 BOT_NAME=Roboto
 
-# Discord Bot Client ID
+# Discord Bot Client ID (Application ID)
 BOT_CLIENT_ID=YourBotClientID
 
 # Discord Bot Token
 BOT_TOKEN=YourBotToken
+
+# OpenAI API KEY
+OPENAI_API_KEY=YourOpenAIKey
 
 # Default prompt or initial message for the bot (optional)
 BOT_PROMPT=You are a very friendly and funny Discord bot!
@@ -20,7 +23,6 @@ TTS_PROVIDER=OPENAI
 IMAGE_CREATION_ENABLED=true
 
 # OpenAI configuration
-OPENAI_API_KEY=YourOpenAIKey
 OPENAI_CHAT_MODEL=gpt-4.1-mini
 OPENAI_SPEECH_MODEL=gpt-4o-mini-tts
 OPENAI_SPEECH_VOICE=fable
