--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "roboto-ai-discord",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "author": "Diego Beltran <diego.beltran88@gmail.com>",
   "description": "A versatile AI-powered Discord bot providing natural conversation, music playback, image generation, voice responses, and multilingual support.",
+  "repository": "noDiego/roboto-ai-discord",
   "main": "index.js",
   "keywords": [
     "discord",
