--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.8.4",
     "discord.js": "^14.18.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "moment-timezone": "^0.5.48",
     "mp3-duration": "^1.1.0",
     "openai": "4.96.2",
